# imageboard

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
config/: .env.template
config/nginx/conf.d/: local.conf
docker/python/: Dockerfile
fixtures/: fixtures.json
src/: swagger.py  urls.py  wsgi.py
src/api/: urls.py
src/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/images/: admin.py  apps.py  exceptions.py  models.py  permissions.py  serializers.py  services.py  urls.py  utils.py  views.py
src/apps/images/migrations/: 0001_initial.py  0002_alter_image_height_alter_image_width_and_more.py  0003_image_uploaded_by_alter_image_image_and_more.py  0004_alter_thumbnail_image_imageaccesstoken.py  0005_alter_image_image_alter_thumbnail_thumbnail.py
src/apps/memberships/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/apps/memberships/migrations/: 0001_initial.py
src/settings/: __init__.py  base.py  swagger.py
tests/test_apps/test_accounts/: test_views.py
tests/test_apps/test_images/: test_services.py  test_utils.py  test_views.py  utils.py
tests/test_apps/test_memberships/: test_views.py
